# website

./: .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  Caddyfile  LICENSE  Logo-no-url-drk.svg:Zone.Identifier  README.md  algolia.d.ts  cssVariables.js  discussions.json  eslint.config.js  favicon.ico:Zone.Identifier  favicon.svg:Zone.Identifier  functions-api.ts  how-to-run.md  jest.config.ts  next-sitemap.config.cjs  next-sitemap.config.js  next.config.js  notes.md  package.json  payload-types.ts  pnpm-lock.yaml  redirects.js  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  threads.json  tsconfig.json  vercel.json
app/: fonts.ts  (+2 more)
docs/dev_docs/droidrun/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  gen-docs-sdk-ref.sh  pyproject.toml  setup.py  네이버 블로그 자동 포스팅 딥 리서치.md
docs/dev_docs/droidrun/docs/: custom.css  docs.json  naver_blog_automation_deep_research_prompt.html  naver_blog_automation_deep_research_prompt.md  overview.md  quickstart.md
docs/dev_docs/droidrun/docs/concepts/: architecture.md  events-and-workflows.md  prompts.md  scripter-agent.md  shared-state.md
docs/dev_docs/droidrun/docs/features/: app-cards.md  credentials.md  custom-tools.md  custom-variables.md  structured-output.md  telemetry.md  tracing.md
docs/dev_docs/droidrun/docs/guides/: cli.md  device-setup.md  docker.md  migration-v3-to-v4.md  overview.md
docs/dev_docs/droidrun/docs/sdk/: adb-tools.md  base-tools.md  configuration.md  droid-agent.md  ios-tools.md  reference.md
docs/dev_docs/droidrun/docs/v1/: overview.md  quickstart.md
docs/dev_docs/droidrun/docs/v1/concepts/: agent.md  android-control.md  portal-app.md
docs/dev_docs/droidrun/docs/v2/: overview.md  quickstart.md
docs/dev_docs/droidrun/docs/v2/concepts/: agent.md  android-control.md  planning.md  portal-app.md  tracing.md
docs/dev_docs/droidrun/docs/v3/: overview.md  quickstart.md
docs/dev_docs/droidrun/docs/v3/concepts/: agent.md  android-tools.md  models.md  portal-app.md
docs/dev_docs/droidrun/docs/v3/guides/: cli.md  gemini.md  ollama.md  openailike.md  overview.md  telemetry.md
docs/dev_docs/droidrun/droidrun/: __init__.py  __main__.py  config_example.yaml  portal.py
docs/dev_docs/droidrun/droidrun/agent/: __init__.py  usage.py
docs/dev_docs/droidrun/droidrun/agent/codeact/: __init__.py  codeact_agent.py  events.py
docs/dev_docs/droidrun/droidrun/agent/common/: constants.py  events.py
docs/dev_docs/droidrun/droidrun/agent/droid/: __init__.py  droid_agent.py  events.py  state.py
docs/dev_docs/droidrun/droidrun/agent/executor/: __init__.py  events.py  executor_agent.py  prompts.py
docs/dev_docs/droidrun/droidrun/agent/manager/: __init__.py  events.py  manager_agent.py  prompts.py
docs/dev_docs/droidrun/droidrun/agent/oneflows/: app_starter_workflow.py  structured_output_agent.py  text_manipulator.py
docs/dev_docs/droidrun/droidrun/agent/scripter/: __init__.py  events.py  scripter_agent.py
docs/dev_docs/droidrun/droidrun/agent/trajectory/: __init__.py  writer.py
docs/dev_docs/droidrun/droidrun/agent/utils/: __init__.py  chat_utils.py  device_state_formatter.py  executer.py  inference.py  llm_loader.py  llm_picker.py  prompt_resolver.py  tools.py  tracing_setup.py  trajectory.py
docs/dev_docs/droidrun/droidrun/app_cards/: app_card_provider.py
docs/dev_docs/droidrun/droidrun/app_cards/providers/: __init__.py  composite_provider.py  local_provider.py  server_provider.py
docs/dev_docs/droidrun/droidrun/cli/: __init__.py  logs.py  main.py
docs/dev_docs/droidrun/droidrun/config/: credentials_example.yaml
docs/dev_docs/droidrun/droidrun/config/app_cards/: README.md  app_cards.json  gmail.md
docs/dev_docs/droidrun/droidrun/config/prompts/codeact/: system.jinja2  user.jinja2
docs/dev_docs/droidrun/droidrun/config/prompts/executor/: rev1.jinja2  system.jinja2
docs/dev_docs/droidrun/droidrun/config/prompts/manager/: rev1.jinja2  system.jinja2
docs/dev_docs/droidrun/droidrun/config_manager/: __init__.py  config_manager.py  path_resolver.py  prompt_loader.py  safe_execution.py
docs/dev_docs/droidrun/droidrun/credential_manager/: __init__.py  credential_manager.py  file_credential_manager.py
docs/dev_docs/droidrun/droidrun/macro/: __init__.py  __main__.py  cli.py  replay.py
docs/dev_docs/droidrun/droidrun/telemetry/: __init__.py  events.py  langfuse_processor.py  phoenix.py  tracker.py
docs/dev_docs/droidrun/droidrun/tools/: __init__.py  a11y_tree_filter.py  adb.py  element_search.py  ios.py  portal_client.py  tools.py
(+2978 files in other folders)
